--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost/jornada_milhas?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
+
+openai.api.key=${TOKEN_GPT}
